--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dialecto",
+  "homepage": "https://neil-brian-araiz.github.io/dialecto-main/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
