--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dialecto",
-  "homepage": "https://neil-brian-araiz.github.io/dialecto-main/",
+  "homepage": "https://neil-brian-araiz.github.io/dialecto/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
